[package]
name = "chainnet-central-router"
version = "0.1.0"
authors = ["Elliot Levin <elliot.levin@cheproximity.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
clap = "3.0.0-beta.2"
anyhow = "1.0.38"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3.6"
libc = "0.2.88"
